--- a/public_html/index.html
+++ b/public_html/index.html
@@ -34,7 +34,7 @@
         </section> 
         <footer>  
             <p>   Copyright Zozor - Tous droits réservés 
-                <a href="#">Me contacter !</a>  
+                <a href="accueil.html">Accueil !</a>  
             </p> 
         </footer>
     </body>
