--- a/public_html/index.html
+++ b/public_html/index.html
@@ -35,6 +35,7 @@
         <footer>  
             <p>   Copyright Zozor - Tous droits réservés 
                 <a href="accueil.html">Accueil !</a>  
+                <a href="contact.html">Accueil !</a>  
             </p> 
         </footer>
     </body>
